[package]
authors = ["rami3l <rami3l@outlook.com>"]
edition = "2018"
name = "respector"
version = "0.1.1"

description = "An extension to add inspect method to Option and Result types."
homepage = "https://github.com/rami3l/respector"
keywords = ["option", "result", "inspect"]
repository = "https://github.com/rami3l/respector"

license = "MIT"
readme = "README.md"
# build = "build.rs"
